ply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> unidad_compilacion
Rule 1     unidad_compilacion -> declaracion_externa
Rule 2     unidad_compilacion -> unidad_compilacion declaracion_externa
Rule 3     declaracion_externa -> definicion_funcion
Rule 4     declaracion_externa -> declaracion_global
Rule 5     declaracion_global -> variable_declaracion
Rule 6     declaracion_global -> funcion_prototipo_declaracion
Rule 7     definicion_funcion -> encabezado_def_funcion cuerpo_funcion
Rule 8     encabezado_def_funcion -> tipo_retorno ID LPAREN def_parametros RPAREN
Rule 9     tipo_retorno -> tipo
Rule 10    tipo_retorno -> VOID
Rule 11    tipo -> INT
Rule 12    tipo -> CHAR
Rule 13    def_parametros -> lista_def_parametros
Rule 14    def_parametros -> VOID
Rule 15    lista_def_parametros -> lista_def_parametros COMMA tipo ID
Rule 16    lista_def_parametros -> tipo ID
Rule 17    cuerpo_funcion -> LBRACE opcional_declaraciones_locales opcional_lista_statements RBRACE
Rule 18    opcional_declaraciones_locales -> declaraciones_locales_list
Rule 19    opcional_declaraciones_locales -> empty
Rule 20    declaraciones_locales_list -> declaraciones_locales_list variable_declaracion
Rule 21    declaraciones_locales_list -> variable_declaracion
Rule 22    variable_declaracion -> tipo lista_simple_identificadores SEMICOLON
Rule 23    lista_simple_identificadores -> lista_simple_identificadores COMMA ID
Rule 24    lista_simple_identificadores -> ID
Rule 25    funcion_prototipo_declaracion -> tipo_retorno ID LPAREN declaracion_parametros RPAREN SEMICOLON
Rule 26    declaracion_parametros -> lista_decl_parametros
Rule 27    declaracion_parametros -> lista_decl_parametros COMMA PUNTOS
Rule 28    declaracion_parametros -> VOID
Rule 29    lista_decl_parametros -> lista_decl_parametros COMMA especificacion_decl_parametros
Rule 30    lista_decl_parametros -> especificacion_decl_parametros
Rule 31    especificacion_decl_parametros -> tipo ID
Rule 32    especificacion_decl_parametros -> CHAR TIMES ID
Rule 33    opcional_lista_statements -> statement_list
Rule 34    opcional_lista_statements -> empty
Rule 35    statement_list -> statement_list statement
Rule 36    statement_list -> statement
Rule 37    statement -> expression_statement
Rule 38    statement -> return_statement
Rule 39    statement -> while_statement
Rule 40    statement -> if_statement
Rule 41    statement -> block_statement
Rule 42    expression_statement -> expresion SEMICOLON
Rule 43    return_statement -> RETURN SEMICOLON
Rule 44    return_statement -> RETURN expresion SEMICOLON
Rule 45    while_statement -> WHILE LPAREN expresion RPAREN statement
Rule 46    if_statement -> IF LPAREN expresion RPAREN statement
Rule 47    if_statement -> IF LPAREN expresion RPAREN statement ELSE statement
Rule 48    block_statement -> LBRACE opcional_declaraciones_locales opcional_lista_statements RBRACE
Rule 49    expresion -> ID ASSIGN expresion
Rule 50    expresion -> expresion_igualdad
Rule 51    expresion_igualdad -> expresion_relacional EQ expresion_relacional
Rule 52    expresion_igualdad -> expresion_relacional NEQ expresion_relacional
Rule 53    expresion_igualdad -> expresion_relacional
Rule 54    expresion_relacional -> expresion_simple LT expresion_simple
Rule 55    expresion_relacional -> expresion_simple LE expresion_simple
Rule 56    expresion_relacional -> expresion_simple GT expresion_simple
Rule 57    expresion_relacional -> expresion_simple GE expresion_simple
Rule 58    expresion_relacional -> expresion_simple
Rule 59    expresion_simple -> expresion_simple PLUS term
Rule 60    expresion_simple -> expresion_simple MINUS term
Rule 61    expresion_simple -> term
Rule 62    term -> term TIMES factor
Rule 63    term -> term DIVIDE factor
Rule 64    term -> factor
Rule 65    factor -> constant
Rule 66    factor -> ID
Rule 67    factor -> LPAREN expresion RPAREN
Rule 68    factor -> PLUS factor
Rule 69    factor -> MINUS factor
Rule 70    factor -> callable_name LPAREN lista_expresiones RPAREN
Rule 71    factor -> callable_name LPAREN RPAREN
Rule 72    callable_name -> ID
Rule 73    callable_name -> PRINTF
Rule 74    callable_name -> SCANF
Rule 75    constant -> STRING_CONSTANT
Rule 76    constant -> INTEGER_CONSTANT
Rule 77    constant -> CHAR_CONSTANT
Rule 78    lista_expresiones -> lista_expresiones COMMA expresion
Rule 79    lista_expresiones -> expresion
Rule 80    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 49
CHAR                 : 12 32
CHAR_CONSTANT        : 77
COMMA                : 15 23 27 29 78
DIVIDE               : 63
ELSE                 : 47
EQ                   : 51
GE                   : 57
GT                   : 56
ID                   : 8 15 16 23 24 25 31 32 49 66 72
IF                   : 46 47
INT                  : 11
INTEGER_CONSTANT     : 76
LBRACE               : 17 48
LE                   : 55
LPAREN               : 8 25 45 46 47 67 70 71
LT                   : 54
MINUS                : 60 69
NEQ                  : 52
PLUS                 : 59 68
PRINTF               : 73
PUNTOS               : 27
RBRACE               : 17 48
RETURN               : 43 44
RPAREN               : 8 25 45 46 47 67 70 71
SCANF                : 74
SEMICOLON            : 22 25 42 43 44
STRING_CONSTANT      : 75
TIMES                : 32 62
VOID                 : 10 14 28
WHILE                : 45
error                : 

Nonterminals, with rules where they appear

block_statement      : 41
callable_name        : 70 71
constant             : 65
cuerpo_funcion       : 7
declaracion_externa  : 1 2
declaracion_global   : 4
declaracion_parametros : 25
declaraciones_locales_list : 18 20
def_parametros       : 8
definicion_funcion   : 3
empty                : 19 34
encabezado_def_funcion : 7
especificacion_decl_parametros : 29 30
expresion            : 42 44 45 46 47 49 67 78 79
expresion_igualdad   : 50
expresion_relacional : 51 51 52 52 53
expresion_simple     : 54 54 55 55 56 56 57 57 58 59 60
expression_statement : 37
factor               : 62 63 64 68 69
funcion_prototipo_declaracion : 6
if_statement         : 40
lista_decl_parametros : 26 27 29
lista_def_parametros : 13 15
lista_expresiones    : 70 78
lista_simple_identificadores : 22 23
opcional_declaraciones_locales : 17 48
opcional_lista_statements : 17 48
return_statement     : 38
statement            : 35 36 45 46 47 47
statement_list       : 33 35
term                 : 59 60 61 62 63
tipo                 : 9 15 16 22 31
tipo_retorno         : 8 25
unidad_compilacion   : 2 0
variable_declaracion : 5 20 21
while_statement      : 39

Parsing method: LALR

state 0

    (0) S' -> . unidad_compilacion
    (1) unidad_compilacion -> . declaracion_externa
    (2) unidad_compilacion -> . unidad_compilacion declaracion_externa
    (3) declaracion_externa -> . definicion_funcion
    (4) declaracion_externa -> . declaracion_global
    (7) definicion_funcion -> . encabezado_def_funcion cuerpo_funcion
    (5) declaracion_global -> . variable_declaracion
    (6) declaracion_global -> . funcion_prototipo_declaracion
    (8) encabezado_def_funcion -> . tipo_retorno ID LPAREN def_parametros RPAREN
    (22) variable_declaracion -> . tipo lista_simple_identificadores SEMICOLON
    (25) funcion_prototipo_declaracion -> . tipo_retorno ID LPAREN declaracion_parametros RPAREN SEMICOLON
    (9) tipo_retorno -> . tipo
    (10) tipo_retorno -> . VOID
    (11) tipo -> . INT
    (12) tipo -> . CHAR

    VOID            shift and go to state 10
    INT             shift and go to state 11
    CHAR            shift and go to state 12

    unidad_compilacion             shift and go to state 1
    declaracion_externa            shift and go to state 2
    definicion_funcion             shift and go to state 3
    declaracion_global             shift and go to state 4
    encabezado_def_funcion         shift and go to state 5
    variable_declaracion           shift and go to state 6
    funcion_prototipo_declaracion  shift and go to state 7
    tipo_retorno                   shift and go to state 8
    tipo                           shift and go to state 9

state 1

    (0) S' -> unidad_compilacion .
    (2) unidad_compilacion -> unidad_compilacion . declaracion_externa
    (3) declaracion_externa -> . definicion_funcion
    (4) declaracion_externa -> . declaracion_global
    (7) definicion_funcion -> . encabezado_def_funcion cuerpo_funcion
    (5) declaracion_global -> . variable_declaracion
    (6) declaracion_global -> . funcion_prototipo_declaracion
    (8) encabezado_def_funcion -> . tipo_retorno ID LPAREN def_parametros RPAREN
    (22) variable_declaracion -> . tipo lista_simple_identificadores SEMICOLON
    (25) funcion_prototipo_declaracion -> . tipo_retorno ID LPAREN declaracion_parametros RPAREN SEMICOLON
    (9) tipo_retorno -> . tipo
    (10) tipo_retorno -> . VOID
    (11) tipo -> . INT
    (12) tipo -> . CHAR

    VOID            shift and go to state 10
    INT             shift and go to state 11
    CHAR            shift and go to state 12

    declaracion_externa            shift and go to state 13
    definicion_funcion             shift and go to state 3
    declaracion_global             shift and go to state 4
    encabezado_def_funcion         shift and go to state 5
    variable_declaracion           shift and go to state 6
    funcion_prototipo_declaracion  shift and go to state 7
    tipo_retorno                   shift and go to state 8
    tipo                           shift and go to state 9

state 2

    (1) unidad_compilacion -> declaracion_externa .

    VOID            reduce using rule 1 (unidad_compilacion -> declaracion_externa .)
    INT             reduce using rule 1 (unidad_compilacion -> declaracion_externa .)
    CHAR            reduce using rule 1 (unidad_compilacion -> declaracion_externa .)
    $end            reduce using rule 1 (unidad_compilacion -> declaracion_externa .)


state 3

    (3) declaracion_externa -> definicion_funcion .

    VOID            reduce using rule 3 (declaracion_externa -> definicion_funcion .)
    INT             reduce using rule 3 (declaracion_externa -> definicion_funcion .)
    CHAR            reduce using rule 3 (declaracion_externa -> definicion_funcion .)
    $end            reduce using rule 3 (declaracion_externa -> definicion_funcion .)


state 4

    (4) declaracion_externa -> declaracion_global .

    VOID            reduce using rule 4 (declaracion_externa -> declaracion_global .)
    INT             reduce using rule 4 (declaracion_externa -> declaracion_global .)
    CHAR            reduce using rule 4 (declaracion_externa -> declaracion_global .)
    $end            reduce using rule 4 (declaracion_externa -> declaracion_global .)


state 5

    (7) definicion_funcion -> encabezado_def_funcion . cuerpo_funcion
    (17) cuerpo_funcion -> . LBRACE opcional_declaraciones_locales opcional_lista_statements RBRACE

    LBRACE          shift and go to state 15

    cuerpo_funcion                 shift and go to state 14

state 6

    (5) declaracion_global -> variable_declaracion .

    VOID            reduce using rule 5 (declaracion_global -> variable_declaracion .)
    INT             reduce using rule 5 (declaracion_global -> variable_declaracion .)
    CHAR            reduce using rule 5 (declaracion_global -> variable_declaracion .)
    $end            reduce using rule 5 (declaracion_global -> variable_declaracion .)


state 7

    (6) declaracion_global -> funcion_prototipo_declaracion .

    VOID            reduce using rule 6 (declaracion_global -> funcion_prototipo_declaracion .)
    INT             reduce using rule 6 (declaracion_global -> funcion_prototipo_declaracion .)
    CHAR            reduce using rule 6 (declaracion_global -> funcion_prototipo_declaracion .)
    $end            reduce using rule 6 (declaracion_global -> funcion_prototipo_declaracion .)


state 8

    (8) encabezado_def_funcion -> tipo_retorno . ID LPAREN def_parametros RPAREN
    (25) funcion_prototipo_declaracion -> tipo_retorno . ID LPAREN declaracion_parametros RPAREN SEMICOLON

    ID              shift and go to state 16


state 9

    (22) variable_declaracion -> tipo . lista_simple_identificadores SEMICOLON
    (9) tipo_retorno -> tipo .
    (23) lista_simple_identificadores -> . lista_simple_identificadores COMMA ID
    (24) lista_simple_identificadores -> . ID

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 18

  ! ID              [ reduce using rule 9 (tipo_retorno -> tipo .) ]

    lista_simple_identificadores   shift and go to state 17

state 10

    (10) tipo_retorno -> VOID .

    ID              reduce using rule 10 (tipo_retorno -> VOID .)


state 11

    (11) tipo -> INT .

    ID              reduce using rule 11 (tipo -> INT .)


state 12

    (12) tipo -> CHAR .

    ID              reduce using rule 12 (tipo -> CHAR .)


state 13

    (2) unidad_compilacion -> unidad_compilacion declaracion_externa .

    VOID            reduce using rule 2 (unidad_compilacion -> unidad_compilacion declaracion_externa .)
    INT             reduce using rule 2 (unidad_compilacion -> unidad_compilacion declaracion_externa .)
    CHAR            reduce using rule 2 (unidad_compilacion -> unidad_compilacion declaracion_externa .)
    $end            reduce using rule 2 (unidad_compilacion -> unidad_compilacion declaracion_externa .)


state 14

    (7) definicion_funcion -> encabezado_def_funcion cuerpo_funcion .

    VOID            reduce using rule 7 (definicion_funcion -> encabezado_def_funcion cuerpo_funcion .)
    INT             reduce using rule 7 (definicion_funcion -> encabezado_def_funcion cuerpo_funcion .)
    CHAR            reduce using rule 7 (definicion_funcion -> encabezado_def_funcion cuerpo_funcion .)
    $end            reduce using rule 7 (definicion_funcion -> encabezado_def_funcion cuerpo_funcion .)


state 15

    (17) cuerpo_funcion -> LBRACE . opcional_declaraciones_locales opcional_lista_statements RBRACE
    (18) opcional_declaraciones_locales -> . declaraciones_locales_list
    (19) opcional_declaraciones_locales -> . empty
    (20) declaraciones_locales_list -> . declaraciones_locales_list variable_declaracion
    (21) declaraciones_locales_list -> . variable_declaracion
    (80) empty -> .
    (22) variable_declaracion -> . tipo lista_simple_identificadores SEMICOLON
    (11) tipo -> . INT
    (12) tipo -> . CHAR

    RETURN          reduce using rule 80 (empty -> .)
    WHILE           reduce using rule 80 (empty -> .)
    IF              reduce using rule 80 (empty -> .)
    LBRACE          reduce using rule 80 (empty -> .)
    ID              reduce using rule 80 (empty -> .)
    LPAREN          reduce using rule 80 (empty -> .)
    PLUS            reduce using rule 80 (empty -> .)
    MINUS           reduce using rule 80 (empty -> .)
    STRING_CONSTANT reduce using rule 80 (empty -> .)
    INTEGER_CONSTANT reduce using rule 80 (empty -> .)
    CHAR_CONSTANT   reduce using rule 80 (empty -> .)
    PRINTF          reduce using rule 80 (empty -> .)
    SCANF           reduce using rule 80 (empty -> .)
    RBRACE          reduce using rule 80 (empty -> .)
    INT             shift and go to state 11
    CHAR            shift and go to state 12

    opcional_declaraciones_locales shift and go to state 19
    declaraciones_locales_list     shift and go to state 20
    empty                          shift and go to state 21
    variable_declaracion           shift and go to state 22
    tipo                           shift and go to state 23

state 16

    (8) encabezado_def_funcion -> tipo_retorno ID . LPAREN def_parametros RPAREN
    (25) funcion_prototipo_declaracion -> tipo_retorno ID . LPAREN declaracion_parametros RPAREN SEMICOLON

    LPAREN          shift and go to state 24


state 17

    (22) variable_declaracion -> tipo lista_simple_identificadores . SEMICOLON
    (23) lista_simple_identificadores -> lista_simple_identificadores . COMMA ID

    SEMICOLON       shift and go to state 25
    COMMA           shift and go to state 26


state 18

    (24) lista_simple_identificadores -> ID .

    SEMICOLON       reduce using rule 24 (lista_simple_identificadores -> ID .)
    COMMA           reduce using rule 24 (lista_simple_identificadores -> ID .)


state 19

    (17) cuerpo_funcion -> LBRACE opcional_declaraciones_locales . opcional_lista_statements RBRACE
    (33) opcional_lista_statements -> . statement_list
    (34) opcional_lista_statements -> . empty
    (35) statement_list -> . statement_list statement
    (36) statement_list -> . statement
    (80) empty -> .
    (37) statement -> . expression_statement
    (38) statement -> . return_statement
    (39) statement -> . while_statement
    (40) statement -> . if_statement
    (41) statement -> . block_statement
    (42) expression_statement -> . expresion SEMICOLON
    (43) return_statement -> . RETURN SEMICOLON
    (44) return_statement -> . RETURN expresion SEMICOLON
    (45) while_statement -> . WHILE LPAREN expresion RPAREN statement
    (46) if_statement -> . IF LPAREN expresion RPAREN statement
    (47) if_statement -> . IF LPAREN expresion RPAREN statement ELSE statement
    (48) block_statement -> . LBRACE opcional_declaraciones_locales opcional_lista_statements RBRACE
    (49) expresion -> . ID ASSIGN expresion
    (50) expresion -> . expresion_igualdad
    (51) expresion_igualdad -> . expresion_relacional EQ expresion_relacional
    (52) expresion_igualdad -> . expresion_relacional NEQ expresion_relacional
    (53) expresion_igualdad -> . expresion_relacional
    (54) expresion_relacional -> . expresion_simple LT expresion_simple
    (55) expresion_relacional -> . expresion_simple LE expresion_simple
    (56) expresion_relacional -> . expresion_simple GT expresion_simple
    (57) expresion_relacional -> . expresion_simple GE expresion_simple
    (58) expresion_relacional -> . expresion_simple
    (59) expresion_simple -> . expresion_simple PLUS term
    (60) expresion_simple -> . expresion_simple MINUS term
    (61) expresion_simple -> . term
    (62) term -> . term TIMES factor
    (63) term -> . term DIVIDE factor
    (64) term -> . factor
    (65) factor -> . constant
    (66) factor -> . ID
    (67) factor -> . LPAREN expresion RPAREN
    (68) factor -> . PLUS factor
    (69) factor -> . MINUS factor
    (70) factor -> . callable_name LPAREN lista_expresiones RPAREN
    (71) factor -> . callable_name LPAREN RPAREN
    (75) constant -> . STRING_CONSTANT
    (76) constant -> . INTEGER_CONSTANT
    (77) constant -> . CHAR_CONSTANT
    (72) callable_name -> . ID
    (73) callable_name -> . PRINTF
    (74) callable_name -> . SCANF

    RBRACE          reduce using rule 80 (empty -> .)
    RETURN          shift and go to state 38
    WHILE           shift and go to state 39
    IF              shift and go to state 41
    LBRACE          shift and go to state 27
    ID              shift and go to state 42
    LPAREN          shift and go to state 40
    PLUS            shift and go to state 46
    MINUS           shift and go to state 48
    STRING_CONSTANT shift and go to state 52
    INTEGER_CONSTANT shift and go to state 53
    CHAR_CONSTANT   shift and go to state 54
    PRINTF          shift and go to state 55
    SCANF           shift and go to state 56

    opcional_lista_statements      shift and go to state 28
    statement_list                 shift and go to state 29
    empty                          shift and go to state 30
    statement                      shift and go to state 31
    expression_statement           shift and go to state 32
    return_statement               shift and go to state 33
    while_statement                shift and go to state 34
    if_statement                   shift and go to state 35
    block_statement                shift and go to state 36
    expresion                      shift and go to state 37
    expresion_igualdad             shift and go to state 43
    expresion_relacional           shift and go to state 44
    expresion_simple               shift and go to state 45
    term                           shift and go to state 47
    factor                         shift and go to state 49
    constant                       shift and go to state 50
    callable_name                  shift and go to state 51

state 20

    (18) opcional_declaraciones_locales -> declaraciones_locales_list .
    (20) declaraciones_locales_list -> declaraciones_locales_list . variable_declaracion
    (22) variable_declaracion -> . tipo lista_simple_identificadores SEMICOLON
    (11) tipo -> . INT
    (12) tipo -> . CHAR

    RETURN          reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    WHILE           reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    IF              reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    LBRACE          reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    ID              reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    LPAREN          reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    PLUS            reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    MINUS           reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    STRING_CONSTANT reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    INTEGER_CONSTANT reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    CHAR_CONSTANT   reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    PRINTF          reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    SCANF           reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    RBRACE          reduce using rule 18 (opcional_declaraciones_locales -> declaraciones_locales_list .)
    INT             shift and go to state 11
    CHAR            shift and go to state 12

    variable_declaracion           shift and go to state 57
    tipo                           shift and go to state 23

state 21

    (19) opcional_declaraciones_locales -> empty .

    RETURN          reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    WHILE           reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    IF              reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    LBRACE          reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    ID              reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    LPAREN          reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    PLUS            reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    MINUS           reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    STRING_CONSTANT reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    INTEGER_CONSTANT reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    CHAR_CONSTANT   reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    PRINTF          reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    SCANF           reduce using rule 19 (opcional_declaraciones_locales -> empty .)
    RBRACE          reduce using rule 19 (opcional_declaraciones_locales -> empty .)


state 22

    (21) declaraciones_locales_list -> variable_declaracion .

    INT             reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    CHAR            reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    RETURN          reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    WHILE           reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    IF              reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    LBRACE          reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    ID              reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    LPAREN          reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    PLUS            reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    MINUS           reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    STRING_CONSTANT reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    INTEGER_CONSTANT reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    CHAR_CONSTANT   reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    PRINTF          reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    SCANF           reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)
    RBRACE          reduce using rule 21 (declaraciones_locales_list -> variable_declaracion .)


state 23

    (22) variable_declaracion -> tipo . lista_simple_identificadores SEMICOLON
    (23) lista_simple_identificadores -> . lista_simple_identificadores COMMA ID
    (24) lista_simple_identificadores -> . ID

    ID              shift and go to state 18

    lista_simple_identificadores   shift and go to state 17

state 24

    (8) encabezado_def_funcion -> tipo_retorno ID LPAREN . def_parametros RPAREN
    (25) funcion_prototipo_declaracion -> tipo_retorno ID LPAREN . declaracion_parametros RPAREN SEMICOLON
    (13) def_parametros -> . lista_def_parametros
    (14) def_parametros -> . VOID
    (26) declaracion_parametros -> . lista_decl_parametros
    (27) declaracion_parametros -> . lista_decl_parametros COMMA PUNTOS
    (28) declaracion_parametros -> . VOID
    (15) lista_def_parametros -> . lista_def_parametros COMMA tipo ID
    (16) lista_def_parametros -> . tipo ID
    (29) lista_decl_parametros -> . lista_decl_parametros COMMA especificacion_decl_parametros
    (30) lista_decl_parametros -> . especificacion_decl_parametros
    (11) tipo -> . INT
    (12) tipo -> . CHAR
    (31) especificacion_decl_parametros -> . tipo ID
    (32) especificacion_decl_parametros -> . CHAR TIMES ID

    VOID            shift and go to state 61
    INT             shift and go to state 11
    CHAR            shift and go to state 65

    def_parametros                 shift and go to state 58
    declaracion_parametros         shift and go to state 59
    lista_def_parametros           shift and go to state 60
    lista_decl_parametros          shift and go to state 62
    tipo                           shift and go to state 63
    especificacion_decl_parametros shift and go to state 64

state 25

    (22) variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .

    VOID            reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    INT             reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    CHAR            reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    $end            reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    RETURN          reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    WHILE           reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    IF              reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    LBRACE          reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    ID              reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    LPAREN          reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    PLUS            reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    MINUS           reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    STRING_CONSTANT reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    INTEGER_CONSTANT reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    CHAR_CONSTANT   reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    PRINTF          reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    SCANF           reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)
    RBRACE          reduce using rule 22 (variable_declaracion -> tipo lista_simple_identificadores SEMICOLON .)


state 26

    (23) lista_simple_identificadores -> lista_simple_identificadores COMMA . ID

    ID              shift and go to state 66


state 27

    (48) block_statement -> LBRACE . opcional_declaraciones_locales opcional_lista_statements RBRACE
    (18) opcional_declaraciones_locales -> . declaraciones_locales_list
    (19) opcional_declaraciones_locales -> . empty
    (20) declaraciones_locales_list -> . declaraciones_locales_list variable_declaracion
    (21) declaraciones_locales_list -> . variable_declaracion
    (80) empty -> .
    (22) variable_declaracion -> . tipo lista_simple_identificadores SEMICOLON
    (11) tipo -> . INT
    (12) tipo -> . CHAR

    RETURN          reduce using rule 80 (empty -> .)
    WHILE           reduce using rule 80 (empty -> .)
    IF              reduce using rule 80 (empty -> .)
    LBRACE          reduce using rule 80 (empty -> .)
    ID              reduce using rule 80 (empty -> .)
    LPAREN          reduce using rule 80 (empty -> .)
    PLUS            reduce using rule 80 (empty -> .)
    MINUS           reduce using rule 80 (empty -> .)
    STRING_CONSTANT reduce using rule 80 (empty -> .)
    INTEGER_CONSTANT reduce using rule 80 (empty -> .)
    CHAR_CONSTANT   reduce using rule 80 (empty -> .)
    PRINTF          reduce using rule 80 (empty -> .)
    SCANF           reduce using rule 80 (empty -> .)
    RBRACE          reduce using rule 80 (empty -> .)
    INT             shift and go to state 11
    CHAR            shift and go to state 12

    opcional_declaraciones_locales shift and go to state 67
    declaraciones_locales_list     shift and go to state 20
    empty                          shift and go to state 21
    variable_declaracion           shift and go to state 22
    tipo                           shift and go to state 23

state 28

    (17) cuerpo_funcion -> LBRACE opcional_declaraciones_locales opcional_lista_statements . RBRACE

    RBRACE          shift and go to state 68


state 29

    (33) opcional_lista_statements -> statement_list .
    (35) statement_list -> statement_list . statement
    (37) statement -> . expression_statement
    (38) statement -> . return_statement
    (39) statement -> . while_statement
    (40) statement -> . if_statement
    (41) statement -> . block_statement
    (42) expression_statement -> . expresion SEMICOLON
    (43) return_statement -> . RETURN SEMICOLON
    (44) return_statement -> . RETURN expresion SEMICOLON
    (45) while_statement -> . WHILE LPAREN expresion RPAREN statement
    (46) if_statement -> . IF LPAREN expresion RPAREN statement
    (47) if_statement -> . IF LPAREN expresion RPAREN statement ELSE statement
    (48) block_statement -> . LBRACE opcional_declaraciones_locales opcional_lista_statements RBRACE
    (49) expresion -> . ID ASSIGN expresion
    (50) expresion -> . expresion_igualdad
    (51) expresion_igualdad -> . expresion_relacional EQ expresion_relacional
    (52) expresion_igualdad -> . expresion_relacional NEQ expresion_relacional
    (53) expresion_igualdad -> . expresion_relacional
    (54) expresion_relacional -> . expresion_simple LT expresion_simple
    (55) expresion_relacional -> . expresion_simple LE expresion_simple
    (56) expresion_relacional -> . expresion_simple GT expresion_simple
    (57) expresion_relacional -> . expresion_simple GE expresion_simple
    (58) expresion_relacional -> . expresion_simple
    (59) expresion_simple -> . expresion_simple PLUS term
    (60) expresion_simple -> . expresion_simple MINUS term
    (61) expresion_simple -> . term
    (62) term -> . term TIMES factor
    (63) term -> . term DIVIDE factor
    (64) term -> . factor
    (65) factor -> . constant
    (66) factor -> . ID
    (67) factor -> . LPAREN expresion RPAREN
    (68) factor -> . PLUS factor
    (69) factor -> . MINUS factor
    (70) factor -> . callable_name LPAREN lista_expresiones RPAREN
    (71) factor -> . callable_name LPAREN RPAREN
    (75) constant -> . STRING_CONSTANT
    (76) constant -> . INTEGER_CONSTANT
    (77) constant -> . CHAR_CONSTANT
    (72) callable_name -> . ID
    (73) callable_name -> . PRINTF
    (74) callable_name -> . SCANF

    RBRACE          reduce using rule 33 (opcional_lista_statements -> statement_list .)
    RETURN          shift and go to state 38
    WHILE           shift and go to state 39
    IF              shift and go to state 41
    LBRACE          shift and go to state 27
    ID              shift and go to state 42
    LPAREN          shift and go to state 40
    PLUS            shift and go to state 46
    MINUS           shift and go to state 48
    STRING_CONSTANT shift and go to state 52
    INTEGER_CONSTANT shift and go to state 53
    CHAR_CONSTANT   shift and go to state 54
    PRINTF          shift and go to state 55
    SCANF           shift and go to state 56

    statement                      shift and go to state 69
    expression_statement           shift and go to state 32
    return_statement               shift and go to state 33
    while_statement                shift and go to state 34
    if_statement                   shift and go to state 35
    block_statement                shift and go to state 36
    expresion                      shift and go to state 37
    expresion_igualdad             shift and go to state 43
    expresion_relacional           shift and go to state 44
    expresion_simple               shift and go to state 45
    term                           shift and go to state 47
    factor                         shift and go to state 49
    constant                       shift and go to state 50
    callable_name                  shift and go to state 51

state 30

    (34) opcional_lista_statements -> empty .

    RBRACE          reduce using rule 34 (opcional_lista_statements -> empty .)


state 31

    (36) statement_list -> statement .

    RETURN          reduce using rule 36 (statement_list -> statement .)
    WHILE           reduce using rule 36 (statement_list -> statement .)
    IF              reduce using rule 36 (statement_list -> statement .)
    LBRACE          reduce using rule 36 (statement_list -> statement .)
    ID              reduce using rule 36 (statement_list -> statement .)
    LPAREN          reduce using rule 36 (statement_list -> statement .)
    PLUS            reduce using rule 36 (statement_list -> statement .)
    MINUS           reduce using rule 36 (statement_list -> statement .)
    STRING_CONSTANT reduce using rule 36 (statement_list -> statement .)
    INTEGER_CONSTANT reduce using rule 36 (statement_list -> statement .)
    CHAR_CONSTANT   reduce using rule 36 (statement_list -> statement .)
    PRINTF          reduce using rule 36 (statement_list -> statement .)
    SCANF           reduce using rule 36 (statement_list -> statement .)
    RBRACE          reduce using rule 36 (statement_list -> statement .)


state 32

    (37) statement -> expression_statement .
